<?xml version="1.0"?>
<package>
  <name>test_openhrp</name>
  <description>
    test_openhrp package
  </description>
  <version>0.0.1</version>
  <maintainer email="nguyen@jsk.t.u-tokyo.ac.jp">Khanh Nguyen</maintainer>
  <license>NYSL</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>openhrp3</build_depend>

  <run_depend>openhrp3</run_depend>
</package>
